# ShrineOS_2

./: Makefile  workspace.code-workspace
source/: init.lua
source/home/: main.lua
source/lib/: algorithm.lua  bit32.lua  colors.lua  component.lua  cursor.lua  event.lua  exception.lua  filesystem.lua  functional.lua  gui.lua  keyboard.lua  numeric.lua  package.lua  sides.lua  socket.lua  terminal.lua  thread.doc.lua  thread.lua  uuid.lua  views.lua
source/lib/arg/: glasses.lua  openglasses.doc.lua
source/lib/gfx/: device.doc.lua  device.lua
source/lib/network/: netbase.lua
source/lib/old/: process.lua
source/system/: boot.lua  kernel.lua
tools/installer/: CMakeLists.txt  Makefile  main.cpp
